<resources>
    <string name="app_name">miaojiaohui2</string>
    <string name="title_company">苗圃</string>
    <string name="title_gongying">供应</string>
    <string name="title_caoping">草坪</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView1</string>
    <string name="company">Company</string>
    <string name="contactor">Contactor</string>
    <string name="business">Business</string>
    <string name="address">Address</string>
    <string name="companyImage">TODO</string>
    <string name="companyimageView2">TODO</string>
    <string name="todo">TODO</string>
</resources>