<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_company">

    <fragment
        android:id="@+id/navigation_company"
        android:name="com.example.miaojiaohui2.ui.company.CompanyFragment"
        android:label="@string/title_company"
        tools:layout="@layout/fragment_company" />

    <fragment
        android:id="@+id/navigation_gongying"
        android:name="com.example.miaojiaohui2.ui.gongying.gongyingFragment"
        android:label="@string/title_gongying"
        tools:layout="@layout/fragment_gongying" />

    <fragment
        android:id="@+id/navigation_caoping"
        android:name="com.example.miaojiaohui2.ui.caoping.NotificationsFragment"
        android:label="@string/title_caoping"
        tools:layout="@layout/fragment_caoping" />
</navigation>